FIX: image align css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1330,6 +1330,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 /*--------------------------------------------------------------
