--- a/assets/scss/css-framework/_wpnative.scss
+++ b/assets/scss/css-framework/_wpnative.scss
@@ -94,6 +94,7 @@ img {
 
 .aligncenter {
 	@include center-block;
+	text-align: center;
 }
 
 /*--------------------------------------------------------------
